--- a/tp3/index.html
+++ b/tp3/index.html
@@ -22,6 +22,7 @@
       <textarea type="message" id="message" rows="4" required></textarea>
 
       <input type="submit" value="Envoyer">
+      <a href="../index.html"> retour à l'accueil </a><br> 
     </form>
 </body>
 </html>
