--- a/tp3/index.html
+++ b/tp3/index.html
@@ -3,26 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP3</title>
-    <link rel="stylesheet" type="text/css" href="formulaire.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1> Concatez-nous</h1>
-    <form action="" method="post"> 
-      <label for="nom"> Nom: </label>
-      <input type="text" id="nom" name="nom" required>
-
-      <label for="prenom"> Prénom: </label>
-      <input type="text" id="tel" name="tel" required>
-
-      <label for="tel"> Tel: </label>
-      <input type="number" id="tel" name="tel" required>
-
-      <label for="message"> Message: </label>
-      <textarea type="message" id="message" rows="4" required></textarea>
-
-      <input type="submit" value="Envoyer">
-      <a href="../index.html"> retour à l'accueil </a><br> 
-    </form>
+    <h1>TP3</h1>
+    <a href="formulaire.html"> Formulaire</a><br> 
+    <a href="pagestructuré.html"> Structuration</a><br> 
+    <a href="../index.html"> retour à l'accueil </a><br> 
 </body>
 </html>
