--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <a href="tp1/index.html"> TP1 </a><br> 
     <br><a href="mission1/index.html"> MISSION 1 </a><br> 
   <br> <a href="tp2/index.html"> TP 2</a> <br> 
-  <br> <a href="mission2/index.html"> MISSON 2</a> <br></Font></big>
-  <big><br> <a href="tp3/index.html"> TP3</a> <br></Font></big>
+  <br> <a href="mission2/index.html"> MISSON 2</a> <br>
+  <br> <a href="tp3/index.html"> TP3</a> <br></Font></big>
 </center>
 </body>
 </html>
