--- a/tp3/index.html
+++ b/tp3/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TP3</h1>
+    <center><h1>TP3</h1>
     <a href="formulaire.html"> Formulaire</a><br> 
     <a href="pagestructuré.html"> Structuration</a><br> 
-    <a href="../index.html"> retour à l'accueil </a><br> 
+    <a href="../index.html"> retour à l'accueil </a><br> </center>
 </body>
 </html>
