--- a/tp3/formulaire.html
+++ b/tp3/formulaire.html
@@ -22,8 +22,8 @@
       <textarea type="message" id="message" rows="4" required></textarea>
 
       <input type="submit" value="Envoyer">
-      <a href="index.html"> Sommaire tp3</a><br> 
-      <a href="../index.html"> retour à l'accueil </a><br> 
+      <br> <a href="index.html"> Sommaire tp3</a><br> 
+     <br> <a href="../index.html"> retour à l'accueil </a><br> 
     </form>
 </body>
 </html>
