--- a/tp3/formulaire.html
+++ b/tp3/formulaire.html
@@ -21,7 +21,7 @@
       <label for="message"> Message: </label>
       <textarea type="message" id="message" rows="4" required></textarea>
 
-      <input type="submit" value="Envoyer">
+      <br> <input type="submit" value="Envoyer">
       <br> <a href="index.html"> Sommaire tp3</a><br> 
      <br> <a href="../index.html"> retour à l'accueil </a><br> 
     </form>
