--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <br> <a href="tp2/index.html"> TP 2</a> <br> 
   <br> <a href="tp3/index.html"> TP3</a> <br>
   <br><a href="mission1/index.html"> MISSION 1 </a><br> 
-  <br> <a href="mission2/index.html"> MISSON 2</a> <br> </Font></big>
+  <br> <a href="mission2/index.html"> MISSON 2</a> <br>
+  <br> <a href="mission3/index.html"> MISSON 3</a> <br>
+ </Font></big>
 </center>
 </body>
 </html>
