--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body background="sharon.JPEG">
+<body background="fleurr.jpg">
     <center> <h1>ALIHONOU SHARON - PORTFOLIO</h1> </center>
     <center> <big> <FONT size="6%">  
       <a href="tp1/index.html"> TP1 </a><br> 
+  <br> <a href="tp1_js/index.html"> TP1_JS</a> <br>
   <br> <a href="tp2/index.html"> TP 2</a> <br> 
   <br> <a href="tp3/index.html"> TP3</a> <br>
   <br><a href="mission1/index.html"> MISSION 1 </a><br> 
   <br> <a href="mission2/index.html"> MISSON 2</a> <br>
   <br> <a href="mission3/index.html"> MISSON 3</a> <br>
   <br> <a href="mission 4/index.html"> MISSON 4</a> <br>
+  
  </Font></big>
 </center>
 </body>
