--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <center> <big> <FONT size="6%">  
       <a href="tp1/index.html"> TP1 </a><br> 
   <br> <a href="tp1_js/index.html"> TP1_JS</a> <br>
-  <br> <a href="tp1bd/location_voiture.sql"> TP1 Base de données</a> <br>
+  <br> <a href="tp1bd/index.html"> TP1 Base de données</a> <br>
   <br> <a href="tp2/index.html"> TP 2</a> <br> 
   <br> <a href="tp3/index.html"> TP3</a> <br>
   <br><a href="mission1/index.html"> MISSION 1 </a><br> 
