--- a/Tp4/index.html
+++ b/Tp4/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title>TP4</title>
+    <title>Document</title>
 </head>
 <body>
-    <div class="block1"><p> Je m'appelle Sharon la star</p></div>
-    <div class="block2"><p> BTS SIO SLAM</p></div>
-    <div class="block3"><img src="image.jpg"></div>
+    <h1>Bienvenue sur le TP4</h1>
+    <a href="exercice 1.html">Exercice 1</a><br>
+    <a href="exercice2.html">Exercice 2</a>
 </body>
 </html>
