--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio d'Alihonou Sharon</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body background="fleurr.jpg">
-    <center> <h1>ALIHONOU SHARON - PORTFOLIO</h1> </center>
-    <center> <big> <FONT size="6%">  
-      <a href="tp1/index.html"> TP1 </a><br> 
-  <br> <a href="tp1_js/index.html"> TP1_JS</a> <br>
-  <br> <a href="tp1bd/index.html"> TP1 Base de données</a> <br>
-  <br> <a href="tp2/index.html"> TP 2</a> <br> 
-  <br> <a href="tp3/index.html"> TP3</a> <br>
-  <br> <a href="Tp4/index.html"> TP4</a> <br>
-  <br><a href="mission1/index.html"> MISSION 1 </a><br> 
-  <br> <a href="mission2/index.html"> MISSON 2</a> <br>
-  <br> <a href="mission3/index.html"> MISSON 3</a> <br>
-  <br> <a href="mission 4/index.html"> MISSON 4</a> <br>
-  
- </Font></big>
-</center>
+<body>
+    <div class="container">
+        <h1>ALIHONOU SHARON - PORTFOLIO</h1>
+        
+        <div class="section">
+            <h2>Travaux Pratiques</h2>
+            <ul class="assignment-list">
+                <li><a href="tp1/index.html">TP1</a></li>
+                <li><a href="tp1_js/index.html">TP1_JS</a></li>
+                <li><a href="tp1bd/index.html">TP1 Base de données</a></li>
+                <li><a href="tp2/index.html">TP2</a></li>
+                <li><a href="tp3/index.html">TP3</a></li>
+                <li><a href="tp4/index.html">TP4</a></li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Missions</h2>
+            <ul class="assignment-list">
+                <li><a href="mission1/index.html">MISSION 1</a></li>
+                <li><a href="mission2/index.html">MISSION 2</a></li>
+                <li><a href="mission3/index.html">MISSION 3</a></li>
+                <li><a href="mission 4/index.html">MISSION 4</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
 
