--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="tp1bd/index.html">TP1 Base de données</a></li>
                 <li><a href="tp2/index.html">TP2</a></li>
                 <li><a href="tp3/index.html">TP3</a></li>
-                <li><a href="tp4/index.html">TP4</a></li>
+                <li><a href="Tp4/index.html">TP4</a></li>
             </ul>
         </div>
 
