--- a/Tp4/index.html
+++ b/Tp4/index.html
@@ -10,6 +10,6 @@
     <h1>Bienvenue sur le TP4</h1>
     <a href="exercice 1.html">Exercice 1</a><br>
     <a href="exercice2.html">Exercice 2</a> 
-    <BR><a href="../index.html"> RETOUR AU SOMMAIRE PRINCIPAL</a>  </BR>
+    <BR> <a href="../index.html">Retour au sommaire</a> </BR>
 </body>
 </html>
