--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="tp2/index.html">TP2</a></li>
                 <li><a href="tp3/index.html">TP3</a></li>
                 <li><a href="tp4/index.html">TP4</a></li>
+                <li><a href="tp4/index.html">TP4</a></li>
             </ul>
         </div>
 
