--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <div class="container">
         <h1>ALIHONOU SHARON - PORTFOLIO</h1>
-        
         <div class="section">
             <h2>Travaux Pratiques</h2>
             <ul class="assignment-list">
@@ -19,10 +18,8 @@
                 <li><a href="tp2/index.html">TP2</a></li>
                 <li><a href="tp3/index.html">TP3</a></li>
                 <li><a href="tp4/index.html">TP4</a></li>
-                <li><a href="tp4/index.html">TP4</a></li>
             </ul>
         </div>
-
         <div class="section">
             <h2>Missions</h2>
             <ul class="assignment-list">
@@ -30,6 +27,7 @@
                 <li><a href="mission2/index.html">MISSION 2</a></li>
                 <li><a href="mission3/index.html">MISSION 3</a></li>
                 <li><a href="mission 4/index.html">MISSION 4</a></li>
+                <li><a href="mission5/index.html">MISSION 5</a></li>
             </ul>
         </div>
     </div>
