--- a/mission5/index.html
+++ b/mission5/index.html
@@ -56,8 +56,8 @@
                 <p><strong>Langues:</strong> Français (maîtrisé), Anglais (en apprentissage), Espagnol (intermédiaire), Yoruba (compréhension), Potugais brésilien (en apprentissage) </p>
                 <p><strong>Compétences:</strong> Word, Excel, PowerPoint, HTML, CSS</p>
             </div>
-        </div>
-        <li><a href="../index.html">Retour au sommaire</a></li>
+            <div class="block6">
+                <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL </a>
     </div>
     
 </body>
