--- a/index.html
+++ b/index.html
@@ -3,34 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio d'Alihonou Sharon</title>
+    <title>CV Alihonou Sharon</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>ALIHONOU SHARON - PORTFOLIO</h1>
-        <div class="section">
-            <h2>Travaux Pratiques</h2>
-            <ul class="assignment-list">
-                <li><a href="tp1/index.html">TP1</a></li>
-                <li><a href="tp1_js/index.html">TP1_JS</a></li>
-                <li><a href="tp1bd/index.html">TP1 Base de données</a></li>
-                <li><a href="tp2/index.html">TP2</a></li>
-                <li><a href="tp3/index.html">TP3</a></li>
-                <li><a href="tp4/index.html">TP4</a></li>
-            </ul>
-        </div>
-        <div class="section">
-            <h2>Missions</h2>
-            <ul class="assignment-list">
-                <li><a href="mission1/index.html">MISSION 1</a></li>
-                <li><a href="mission2/index.html">MISSION 2</a></li>
-                <li><a href="mission3/index.html">MISSION 3</a></li>
-                <li><a href="mission 4/index.html">MISSION 4</a></li>
-                <li><a href="mission5/index.html">MISSION 5</a></li>
-            </ul>
-        </div>
+    <div class="main-container">
+        <div class="container">
+            <div class="block personal-info">
+                <div class="photo">
+                    <img src="cookie.jpeg" alt="photo de profil">
+                </div>
+                <div class="info">
+                    <h1>Alihounou Sharon</h1>
+                    <p>Née le 27 juillet 2006</p>
+                    <p>Île-de-France, France</p>
+                    <p>+33 7 00 00 00</p> 
+                    <p>sharonalihonou@gmail.com</p>
+                </div>
+            </div>
+            <div class="block">
+                <h2>Formations</h2>
+                <div class="item">
+                    <div class="date">2021 - 2024</div>
+                    <div class="description">
+                        <p>Lycée Charles-le-Chauve, Baccalauréat Général spécialité SES, SVT et option DGEMC</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="date">2024 - 2026</div>
+                    <div class="description">
+                        <p>CFA Ingetis, BTS SIO</p>
+                    </div>
+                </div>
+            </div>
+            <div class="block">
+                <h2>Expériences</h2>
+                <div class="item">
+                    <div class="date">Juillet 2023 - Août 2023</div>
+                    <div class="description">
+                        <p><strong>Assistante de Vente</strong><br>Aide aux clients pour trouver les tissus et fils adaptés à leurs besoins et encaissement des achats.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="date">Juillet 2022 - Août 2022</div>
+                    <div class="description">
+                        <p><strong>Baby-sitting</strong><br>Assurer la garde d'enfants chaque soir durant les étés 2022.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="block">
+                <h2>Langues & Compétences Informatiques</h2>
+                <p><strong>Langues:</strong> Français (maîtrisé), Anglais (en apprentissage), Espagnol (intermédiaire), Yoruba (compréhension), Potugais brésilien (en apprentissage) </p>
+                <p><strong>Compétences:</strong> Word, Excel, PowerPoint, HTML, CSS</p>
+            </div>
+            <div class="block6">
+                <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL </a>
     </div>
+    
 </body>
 </html>
-
