--- a/index.html
+++ b/index.html
@@ -7,32 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>ALIHONOU SHARON - PORTFOLIO</h1>
-        
-        <div class="section">
-            <h2>Travaux Pratiques</h2>
-            <ul class="assignment-list">
-                <li><a href="tp1/index.html">TP1</a></li>
-                <li><a href="tp1_js/index.html">TP1_JS</a></li>
-                <li><a href="tp1bd/index.html">TP1 Base de données</a></li>
-                <li><a href="tp2/index.html">TP2</a></li>
-                <li><a href="tp3/index.html">TP3</a></li>
-                <li><a href="tp4/index.html">TP4</a></li>
-                <li><a href="tp4/index.html">TP4</a></li>
-            </ul>
+    <div class="main-wrapper">
+        <header class="header">
+            <h1>Alihonou Sharon</h1>
+            <p>Développeuse Web et Créatrice de Solutions Digitales</p>
+        </header>
+        <div class="container">
+            <section class="section">
+                <h2>Travaux Pratiques</h2>
+                <div class="card-list">
+                    <a href="tp1/index.html" class="card">TP1</a>
+                    <a href="tp1_js/index.html" class="card">TP1_JS</a>
+                    <a href="tp1bd/index.html" class="card">TP1 Base de données</a>
+                    <a href="tp2/index.html" class="card">TP2</a>
+                    <a href="tp3/index.html" class="card">TP3</a>
+                    <a href="tp4/index.html" class="card">TP4</a>
+                </div>
+            </section>
+            <section class="section">
+                <h2>Missions</h2>
+                <div class="card-list">
+                    <a href="mission1/index.html" class="card">MISSION 1</a>
+                    <a href="mission2/index.html" class="card">MISSION 2</a>
+                    <a href="mission3/index.html" class="card">MISSION 3</a>
+                    <a href="mission4/index.html" class="card">MISSION 4</a>
+                    <a href="mission5/index.html" class="card">MISSION 5</a>
+                </div>
+            </section>
         </div>
-
-        <div class="section">
-            <h2>Missions</h2>
-            <ul class="assignment-list">
-                <li><a href="mission1/index.html">MISSION 1</a></li>
-                <li><a href="mission2/index.html">MISSION 2</a></li>
-                <li><a href="mission3/index.html">MISSION 3</a></li>
-                <li><a href="mission 4/index.html">MISSION 4</a></li>
-            </ul>
-        </div>
+        <footer class="footer">
+            <p>Contact : alihonou.sharon@example.com</p>
+            <p>&copy; 2023 Alihonou Sharon - Tous droits réservés</p>
+        </footer>
     </div>
-    
 </body>
 </html>
+
+
+
+
