--- a/mission5/index.html
+++ b/mission5/index.html
@@ -3,62 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV Alihonou Sharon</title>
+    <title>CV - Sharon Alihonou</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-container">
-        <div class="container">
-            <div class="block personal-info">
-                <div class="photo">
-                    <img src="cookie.jpeg" alt="photo de profil">
-                </div>
-                <div class="info">
-                    <h1>Alihounou Sharon</h1>
-                    <p>Née le 27 juillet 2006</p>
-                    <p>Île-de-France, France</p>
-                    <p>+33 7 00 00 00</p> 
-                    <p>sharonalihonou@gmail.com</p>
-                </div>
+    <div class="B1">
+        <div class="C1">
+            <div class="C2">
+                <h1 class="animated-name">Sharon Alihonou</h1>
+                <p class="C3">Recherche alternance : Technicienne systèmes, réseaux et sécurité. Étudiante en informatique motivée à acquérir des compétences en systèmes, réseaux et sécurité à la recherche d'une opportunité d'apprentissage dans le domaine de l'ingénierie informatique. Passionnée par ce domaine, je suis prête à relever de nouveaux défis et à développer mes connaissances techniques, sur un rythme de 2 jours d’école, 3 jours en entreprise.</p>
             </div>
-            <div class="block">
+            <div class="block C4">
+                <div class="photo">
+                    <img src="cookie.jpeg" alt="Photo de Sharon Alihonou">
+                </div>
+                <div class="C5">
+                    <p>Née en 2006</p>
+                    <p>Roissy-en-Brie, France</p>
+                    <p>07.66.52.22.34 | sharonalihonou@gmail.com</p>
+                </div>
+                <div style="clear: both;"></div>
+            </div>
+            <div class="block" id="formations">
                 <h2>Formations</h2>
                 <div class="item">
-                    <div class="date">2021 - 2024</div>
-                    <div class="description">
-                        <p>Lycée Charles-le-Chauve, Baccalauréat Général spécialité SES, SVT et option DGEMC</p>
-                    </div>
+                    <div class="date">2024 - 2025:</div>
+                    <div class="description">BTS SIO (en cours)</div>
                 </div>
                 <div class="item">
-                    <div class="date">2024 - 2026</div>
+                    <div class="date">2021:</div>
+                    <div class="description">Baccalauréat Général, spécialités SVT et SES, option DGEMC</div>
+                </div>
+                <div class="item">
+                    <div class="date">2017:</div>
+                    <div class="description">Brevet des collèges, mention bien</div>
+                </div>
+            </div>
+            <div class="block" id="experiences">
+                <h2>Expériences Professionnelles</h2>
+                <div class="item">
+                    <div class="date">Février 2024 - Juillet 2024:</div>
+                    <div class="description">Organisatrice d’événements<br>Planification et coordination d'anniversaires, gestion de budget et communication avec les clients.</div>
+                </div>
+                <div class="item">
+                    <div class="date">Juillet 2023 - Août 2023:</div>
+                    <div class="description">Assistante de Vente, Boutique Familiale<br>Aide aux clients pour les choix de tissus et fils, encaissement des achats.</div>
+                </div>
+                <div class="item">
+                    <div class="date">Juillet 2022 - Août 2022:</div>
+                    <div class="description">Baby-sitting<br>Garde d'enfants chaque soir pendant l'été 2022.</div>
+                </div>
+                <div class="item">
+                    <div class="date">Décembre 2021:</div>
+                    <div class="description">Stage de Troisième dans la vente<br>Responsable du rangement des vêtements, promotion des produits sur les réseaux sociaux.</div>
+                </div>
+            </div>
+            <div class="block" id="competences">
+                <h2>Compétences</h2>
+                <div class="item">
+                    <div class="date">Informatique:</div>
+                    <div class="description">Canva, Microsoft Office (Word, PowerPoint, Excel), HTML/CSS (en apprentissage), JavaScript, GitHub</div>
+                </div>
+                <div class="item">
+                    <div class="date">Langues:</div>
                     <div class="description">
-                        <p>CFA Ingetis, BTS SIO</p>
+                        <div><strong>Français:</strong> Maîtrisé</div>
+                        <div><strong>Anglais:</strong> En apprentissage</div>
+                        <div><strong>Espagnol:</strong> Intermédiaire</div>
+                        <div><strong>Yoruba:</strong> Compréhension</div>
+                        <div><strong>Portugais brésilien:</strong> En apprentissage</div>
                     </div>
                 </div>
             </div>
-            <div class="block">
-                <h2>Expériences</h2>
-                <div class="item">
-                    <div class="date">Juillet 2023 - Août 2023</div>
-                    <div class="description">
-                        <p><strong>Assistante de Vente</strong><br>Aide aux clients pour trouver les tissus et fils adaptés à leurs besoins et encaissement des achats.</p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="date">Juillet 2022 - Août 2022</div>
-                    <div class="description">
-                        <p><strong>Baby-sitting</strong><br>Assurer la garde d'enfants chaque soir durant les étés 2022.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="block">
-                <h2>Langues & Compétences Informatiques</h2>
-                <p><strong>Langues:</strong> Français (maîtrisé), Anglais (en apprentissage), Espagnol (intermédiaire), Yoruba (compréhension), Potugais brésilien (en apprentissage) </p>
-                <p><strong>Compétences:</strong> Word, Excel, PowerPoint, HTML, CSS</p>
+            <div class="block" id="interets">
+                <h2>Centres d'Intérêt</h2>
+                <div>Paranormal, Lecture, Cinéma, Ultimate, Photographie, Réseaux sociaux, Art</div>
             </div>
             <div class="block6">
-                <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL </a>
+                <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL</a>
+            </div>
+        </div>
     </div>
-    
 </body>
 </html>
