--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <a href="mission1/index.html" class="card">MISSION 1</a>
                     <a href="mission2/index.html" class="card">MISSION 2</a>
                     <a href="mission3/index.html" class="card">MISSION 3</a>
-                    <a href="mission4/index.html" class="card">MISSION 4</a>
+                    <a href="mission 4/index.html" class="card">MISSION 4</a>
                     <a href="mission5/index.html" class="card">MISSION 5</a>
                 </div>
             </section>
         </div>
         <footer class="footer">
-            <p>Contact : alihonou.sharon@example.com</p>
-            <p>&copy; 2023 Alihonou Sharon - Tous droits réservés</p>
+            <p>Contact : sharonalihonou@gmail.com</p>
+            <p>&copy; 2024 Alihonou Sharon - Tous droits réservés</p>
         </footer>
     </div>
 </body>
