--- a/mission3/index.html
+++ b/mission3/index.html
@@ -12,5 +12,6 @@
     <br> <a href="Module 3.pdf"> MODULE 3</a> <br>
     <br><a href="Module 4.pdf"> MODULE 4 </a><br> 
     <br> <a href="Module 5.pdf"> MODULE 5</a> <br> 
+    <br> <a href="../index.html">Retour au sommaire</a>
 </body>
 </html>
