--- a/mission3/index.html
+++ b/mission3/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Certification</h1>
-    <a href="Module 1.pdf"> Module 1 </a><br> 
-    <br> <a href="Module 2.pdf"> MODULE 2</a> <br> 
-    <br> <a href="Module 3.pdf"> MODULE 3</a> <br>
-    <br><a href="Module 4.pdf"> MODULE 4 </a><br> 
-    <br> <a href="Module 5.pdf"> MODULE 5</a> <br> 
-    <br> <a href="../index.html">Retour au sommaire</a>
+    <div class="container">
+        <h1>Certification</h1>
+        <a href="Module 1.pdf"> Module 1 </a><br> 
+        <a href="Module 2.pdf"> MODULE 2</a> <br> 
+        <a href="Module 3.pdf"> MODULE 3</a> <br>
+        <a href="Module 4.pdf"> MODULE 4 </a><br> 
+        <a href="Module 5.pdf"> MODULE 5</a> <br> 
+        <a href="../index.html">Retour au sommaire</a>
+    </div>
 </body>
 </html>
