--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 </div>
             </section>
             <section class="section">
-                <h2>Missions</h2>
+                <h2>MISSIONS & CERTIFICATIONS </h2>
                 <div class="card-list">
                     <a href="mission1/index.html" class="card">MISSION 1</a>
                     <a href="mission2/index.html" class="card">MISSION 2</a>
-                    <a href="mission3/index.html" class="card">MISSION 3</a>
+                    <a href="mission3/index.html" class="card">MISSION 3 - CERTIFICATION RGPD</a>
                     <a href="mission 4/index.html" class="card">MISSION 4</a>
                     <a href="mission5/index.html" class="card">MISSION 5</a>
                 </div>
