--- a/mission 4/index.html
+++ b/mission 4/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <h1>Sommaire mission 4 </h1><br>
-    <a href="formulaire.html">Formulaire d'inscription</a>
-    <br>
-    <a href="carte de visite.html">Carte de visite</a><br>
-    <a href="../index.html">Retour au sommaire</a>
+    <div class="container">
+        <h1>Sommaire Mission 4</h1>
+        <a href="formulaire.html">Formulaire d'inscription</a><br>
+        <a href="carte de visite.html">Carte de visite</a><br>
+        <a href="../index.html">Retour au sommaire</a>
+    </div>
 </body>
 </html>
