--- a/mission 4/carte de visite.html
+++ b/mission 4/carte de visite.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Carte de visite</title>
+    <link rel="stylesheet" href="style.css">
 <body>
     <div> 
         <section class="profile-card">
@@ -13,13 +13,13 @@
                 <h3>Développeur Web</h3>
                 <p>Passionné par le développement front-end et les technologies modernes comme HTML, CSS, et JavaScript.</p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/sharon-alihounou-2478b4318/">LinkedIn</a> <br>
-                    <a href="https://github.com/Shas2707">GitHub</a> <br>
-                    <a href="https://x.com/Accueil">Twitter</a> <br>
+                    <a href="https://www.linkedin.com/in/sharon-alihounou-2478b4318/">LinkedIn</a> 
+                    <a href="https://github.com/Shas2707">GitHub</a> 
+                    <a href="https://x.com/Accueil">Twitter</a>
+                    <div class="block6"> 
+                        <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL</a> 
+                   </div>
                 </div>
-            </div>
-   <br>
-    </div>
-    <a href="index.html">retour au sommaire de la mission 4</a>
+            </div> 
 </body>
 </html>
