--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <a href="tp4/index.html" class="card" onclick="playTaskMusic(event)">TP4</a>
                     <a href="tp5/identification.html" class="card" onclick="playTaskMusic(event)">TP6</a>
                     <a href="tp6/calculatrice.html" class="card" onclick="playTaskMusic(event)">TP7</a>
+                    <a href="tp facture/tp.html" class="card" onclick="playTaskMusic(event)">TP FACTURE</a>
                 </div>
             </section>
             <section class="section">
