--- a/tp6/calculatrice.html
+++ b/tp6/calculatrice.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="calculatrice.js"></script>
-    <link rel="stylesheet"type="text/css" href="calculatrice.css">
+    <link rel="stylesheet" type="text/css" href="calculatrice.css">
     <title>Calculatrice</title>
 </head>
 <body>
@@ -12,23 +11,27 @@
         <h1>TP5 Calculatrice en JS</h1>
         <div>
             <input class="t" placeholder="Premier chiffre" type="number" name="t1" id="t1">
-            <input class="t" placeholder="deuxième chiffre" type="number" name="t2" id="t2">
+            <input class="t" placeholder="Deuxième chiffre" type="number" name="t2" id="t2">
         </div>
 
         <div>
             <button onclick="addition()"> + </button>
             <button onclick="soustraction()">-</button>
-            <button onclick="division ()"> / </button>
+            <button onclick="division()"> / </button>
             <button onclick="multiplication()"> x </button>
         </div>
+
         <div>
-            <button onclick="parite()">Parite</button>
-            <button onclick="permute()">Permute</button>
+            <button onclick="parite()">Vérifier la parité</button>
+            <button onclick="permute()">Permuter</button>
         </div>
+
         <div>
-            <input class="t 34"placeholder="Résultat" type="text" name ="t3"id="t3" readonly="">
-            <input class="t 34"placeholder="Pair ou Impair" type="text" name ="t4"id="t4" readonly="">
+            <input class="t 34" placeholder="Résultat" type="text" name="t3" id="t3" readonly>
+            <input class="t 34" placeholder="Pair ou Impair" type="text" name="t4" id="t4" readonly>
         </div>
     </center>
+
+    <script src="calculatrice.js"></script>
 </body>
 </html>
