--- a/mission5/index.html
+++ b/mission5/index.html
@@ -80,7 +80,7 @@
                 <div>Paranormal, Lecture, Cinéma, Ultimate, Photographie, Réseaux sociaux, Art</div>
             </div>
             <div class="block6">
-                <a href="../index.html">RETOUR AU SOMMAIRE PRINCIPAL</a>
+                <a href="../index.html?skipIntro=true">RETOUR AU SOMMAIRE PRINCIPAL</a>
             </div>
         </div>
     </div>
