--- a/mission 4/index.html
+++ b/mission 4/index.html
@@ -11,7 +11,7 @@
         <h1>Sommaire Mission 4</h1>
         <a href="formulaire.html">Formulaire d'inscription</a><br>
         <a href="carte de visite.html">Carte de visite</a><br>
-        <a href="../index.html">Retour au sommaire</a>
+        <a href="../index.html?skipIntro=true">Retour au sommaire</a>
     </div>
 </body>
 </html>
