--- a/mission1/index.html
+++ b/mission1/index.html
@@ -13,7 +13,7 @@
     <a href="métier3.html"> Découvre le métier de dévelloper d'application java</a><br>
     <a href="métier4.html"> Découvre le métier de dévelloper salesforce </a><br>
     <a href="ingetis paris.html"> Découvre l'école inegtis paris</a><br> <br>
-    <a href="../index.html"> Retour à l'accueil</a><br> <br>
+    <a href="../index.html?skipIntro=true"> Retour à l'accueil</a><br> <br>
     </FONT>
    
 </html>
