--- a/mission2/index.html
+++ b/mission2/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body bgcolor="064f3c">
-    <h1>Page principal <a href="../index.html"> Page d'accueil</a> </h1>
+    <h1>Page principal <a href="../index.html?skipIntro=true"> Page d'accueil</a> </h1>
     <iframe src="sommaire.html"name="f1" width="30%" height="800"></iframe>
     <iframe src="sommaire.html"name="f2" width="65%" height="800"></iframe> 
 </body>
