--- a/mission3/index.html
+++ b/mission3/index.html
@@ -14,7 +14,7 @@
         <a href="Module 3.pdf"> MODULE 3</a> <br>
         <a href="Module 4.pdf"> MODULE 4 </a><br> 
         <a href="Module 5.pdf"> MODULE 5</a> <br> 
-        <a href="../index.html">Retour au sommaire</a>
+        <a href="../index.html?skipIntro=true">Retour au sommaire</a>
     </div>
 </body>
 </html>
