--- a/tp1/index.html
+++ b/tp1/index.html
@@ -24,7 +24,7 @@ un réseau au sein d'une entreprise.</p>
         <tr> <td>Sisr </td> <td> <img src="image 3.jpg" width="50%" height="200%"></td></tr> <table> </table>
        <a href="slam.html"> visiter la page slam </a><br>
         <a href="sisr.html"> visiter la page sisr </a><br>
-        <a href="../index.html"> retour à l'accueil </a><br> 
+        <a href="../index.html?skipIntro=true"> retour à l'accueil </a><br> 
 
 
 </body>
