--- a/tp5/identification.html
+++ b/tp5/identification.html
@@ -31,6 +31,6 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-    <a href="../index.html">RETOUR</a>
+    <a href="../index.html?skipIntro=true">RETOUR</a>
 </body>
 </html>
