--- a/tp6/calculatrice.html
+++ b/tp6/calculatrice.html
@@ -32,6 +32,7 @@
         </div>
     </center>
 
-    <script src="calculatrice.js"></script>
+    <script src="calculatrice.js"></script><br>
+    <a href="../index.html?skipIntro=true">Retour au sommaire</a>
 </body>
 </html>
