--- a/tp1_js/index.html
+++ b/tp1_js/index.html
@@ -17,5 +17,6 @@
         <button onclick="simple_affichage()"> Affiche nom et prénom</button>
         <button onclick="test_couleur()"> Changer la couleur</button>
     </center>
+    <a href="../index.html?skipIntro=true">Retour à la page principal</a>
 </body>
 </html>
