--- a/tp1bd/index.html
+++ b/tp1bd/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Base de données</h1>
    <img src="ok123.png" alt="">
-    <a href="location_voiture.sql"> fichier.sql télécharge moi </a>
-   
+    <a href="location_voiture.sql"> fichier.sql télécharge moi </a> <br>
+   <a href="../index.html?skipIntro=true">Retour à la page principal</a>
 </body>
 </html>
