--- a/tp3/index.html
+++ b/tp3/index.html
@@ -9,6 +9,6 @@
     <center><h1>TP3</h1>
     <a href="formulaire.html"> Formulaire</a><br> 
     <a href="pagestructuré.html"> Structuration</a><br> 
-    <a href="../index.html"> retour à l'accueil </a><br> </center>
+    <a href="../index.html?skipIntro=true"> retour à l'accueil </a><br> </center>
 </body>
 </html>
