--- a/tp6/calculatrice.html
+++ b/tp6/calculatrice.html
@@ -33,6 +33,6 @@
     </center>
 
     <script src="calculatrice.js"></script><br>
-    <a href="../index.html?skipIntro=true">Retour au sommaire</a>
+   <center> <br><a href="../index.html?skipIntro=true">Retour au sommaire</a></center>
 </body>
 </html>
