--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="tp4/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp4', 9, 5)">TP4</a>
                     <a href="tp5/identification.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp5', 50, 5)">TP5</a>
                     <a href="tp6/calculatrice.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp6', 33, 5)">TP6</a>
-                    <a href="tp_facture/tp.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp_facture', 0, 5)">TP Facture</a>
+                    <a href="tp facture/tp.htmlskipIntro=true" class="card" onclick="playTaskMusic(event, 'tp_facture', 0, 5)">TP Facture</a>
                 </div>
             </section>
             <section class="section">
