--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
 <body>
     <div id="introScreen" class="intro-screen">
         <h1>Bienvenue sur le Portfolio d'Alihonou Sharon</h1>
-        <p>Chargement temps d'attentes estimé à 15 secondes...</p>
+        <p>Chargement le temps d'attente est estimé à 15-20 secondes...</p>
     </div>
     <div id="mainContent" class="main-wrapper" style="display: none;">
         <header class="header">
             <h1>Alihonou Sharon</h1>
             <p>Développeuse Web et Créatrice de Solutions Digitales</p>
         </header>
-        
-        <div class="container">
+         <div class="container">
             <section class="section">
                 <h2>Travaux Pratiques</h2>
                 <div class="card-list">
-                    <a href="tp1/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp1', 11, 5)">TP1</a>
+                    <a href="tp1/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp1', 2.03, 5)">TP1</a>
                     <a href="tp1_js/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp1_js', 10, 5)">TP1_JS</a>
                     <a href="tp1bd/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp1bd', 16, 5)">TP1 Base de données</a>
                     <a href="tp2/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp2', 0, 5)">TP2</a>
                     <a href="tp3/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp3', 38, 5)">TP3</a>
                     <a href="tp4/index.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp4', 9, 5)">TP4</a>
                     <a href="tp5/identification.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp5', 50, 5)">TP5</a>
-                    <a href="tp6/calculatrice.html?skipIntro=true" class="card" onclick="playTaskMusic(event, 'tp6', 33, 5)">TP6</a>
+                    <a href="tp6/calculatrice.html?skipIntro=true"class="card" onclick="playTaskMusic(event, 'tp6', 33, 5)">TP6</a>
                     <a href="tpfacture/tp.html?skipIntro=true"class="card" onclick="playTaskMusic(event, 'tp_facture', 0, 5)">TP Facture</a>
                 </div>
             </section>
@@ -104,6 +103,31 @@
                 window.location.href = event.target.href;
             }, durationSeconds * 1000); 
         }
+        function playTaskMusic(event, id, startSeconds, durationSeconds) {
+    event.preventDefault();
+    players[id].seekTo(startSeconds);  
+    setTimeout(() => {
+        players[id].stopVideo();  
+        window.location.href = event.target.href;  
+    }, durationSeconds * 1000); 
+}
+function handleIntroPlayback(event) {
+    const params = new URLSearchParams(window.location.search);
+    const skipIntro = params.has('skipIntro');
+    
+    if (skipIntro) {
+        document.getElementById('introScreen').style.display = "none";
+        document.getElementById('mainContent').style.display = "block";
+    } else {
+        introPlayer.playVideo();
+        setTimeout(() => {
+            introPlayer.stopVideo();
+            document.getElementById('introScreen').style.display = "none";
+            document.getElementById('mainContent').style.display = "block";
+        }, 10000); 
+    }
+}
+
     </script>
     <div id="introMusic" style="display: none;"></div>
     <div id="tp1Music" style="display: none;"></div>
@@ -120,6 +144,7 @@
     <div id="mission3Music" style="display: none;"></div>
     <div id="mission4Music" style="display: none;"></div>
     <div id="mission5Music" style="display: none;"></div>
+
 </body>
 </html>
 
