--- a/tp1_js/index.html
+++ b/tp1_js/index.html
@@ -17,6 +17,7 @@
         <button onclick="simple_affichage()"> Affiche nom et prénom</button>
         <button onclick="test_couleur()"> Changer la couleur</button>
     </center>
-   <center> <a href="../index.html?skipIntro=true">Retour à la page principal</a></center>
+   
+   <center><a href="../index.html?skipIntro=true">Retour à la page principale</a></center>
 </body>
 </html>
