--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <section>
                 <h2>Travaux Pratiques</h2>
-                <div>
+                <div class="card-list">
                     <button onclick="playMusic('tp1Music'); setTimeout(() => { window.location.href='tp1/index.html'; }, 5000);">TP1</button>
                     <button onclick="playMusic('tp2Music'); setTimeout(() => { window.location.href='tp2/index.html'; }, 5000);">TP2</button>
                     <button onclick="playMusic('tp3Music'); setTimeout(() => { window.location.href='tp3/index.html'; }, 5000);">TP3</button>
@@ -81,7 +81,7 @@
 
             <section>
                 <h2>Missions & Certifications</h2>
-                <div>
+                <div class="card-list">
                     <button onclick="playMusic('mission1Music'); setTimeout(() => { window.location.href='mission1/index.html'; }, 5000);">MISSION 1</button>
                     <button onclick="playMusic('mission2Music'); setTimeout(() => { window.location.href='mission2/index.html'; }, 5000);">MISSION 2</button>
                     <button onclick="playMusic('mission3Music'); setTimeout(() => { window.location.href='mission3/index.html'; }, 5000);">MISSION 3 - CERTIFICATION RGPD</button>
@@ -179,6 +179,11 @@
             }
         }
     </script>
+    <section>
+        <h2>À propos de moi</h2>
+        <p>Je suis passionnée par le développement web et la création de solutions digitales innovantes. 
+           Mon objectif est de combiner design et technologie pour offrir des expériences utilisateurs uniques.</p>
+    </section>
 <script src="java.js"></script>
     <div id="introMusic" style="display:none;"></div>
 </body>
