--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
             }
         }
     </script>
-    <section>
+    <section id="about" style="display: none;">
         <h2>À propos de moi</h2>
         <p>Je suis passionnée par le développement web et la création de solutions digitales innovantes. 
            Mon objectif est de combiner design et technologie pour offrir des expériences utilisateurs uniques.</p>
     </section>
-    <footer class="footer">
+    <footer class="footer"style="display: none;">
         <p>Contact : sharonalihonou@gmail.com</p>
         <p>&copy; 2025 Alihonou Sharon - Tous droits réservés</p>
     </footer>
