--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
           <div class="w-full max-w-xs">
             <p class="text-sm text-gray-800 font-medium mb-2 text-center">Découvrez mon parcours :</p>
-            <a href="Cv Sharon Alihonou.pdf" download="CV_Sharon_Alihonou.pdf"
+            <a href="Cv Sharon Alihonou bts sio.pdf" download="CV_Sharon_Alihonou.pdf"
                class="cv-button block w-full bg-gradient-to-r from-pink-500 via-rose-500 to-purple-500 hover:from-rose-600 hover:via-pink-600 hover:to-purple-600 text-white font-bold py-3 px-4 rounded-full shadow-2xl text-sm md:text-base text-center"
                aria-label="Télécharger le CV de Sharon Alihonou">
               <i class="fas fa-download mr-2"></i>💕 Télécharger mon CV 💕
